// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-comment-event Renders \`create-comment-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout gap-4 column"
      >
        <!---->
        <alarm-comment-template-form-stub
          form="[object Object]"
          templates=""
          value="[object Object]"
        />
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-comment-event Renders \`create-comment-event\` with items 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout gap-4 column"
      >
        <alarm-general-table-stub
          items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        />
        <alarm-comment-template-form-stub
          form="[object Object]"
          templates=""
          value="[object Object]"
        />
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;
